hphp/hack/test/typecheck/coeffects/poly_var_reassign/foreach.php.exp
ERROR: File "foreach.php", line 6, characters 21-22:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
ERROR: File "foreach.php", line 9, characters 22-23:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
ERROR: File "foreach.php", line 12, characters 28-29:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
